# julia-in-motion

./: .gitignore  Cargo.toml  README.md  fractal.webm  hello.webm
src/: args.rs  fractal_info.rs  generator.rs  main.rs  options.yml  output.rs  path_length.rs  path_util.rs  raster.rs  util.rs
src/generator/: args.rs  mod.rs  view.rs
src/output/: extra.rs  mod.rs
