[package]
name = "julia-in-motion"
version = "0.1.0"
authors = ["Kneelawk <jedidiah.pommert@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
ffmpeg4 = "0.4.0"
lyon_algorithms = "0.15.0"
lyon_path = "0.15.1"
lyon_svg = "0.15.0"
minifb = "0.15.3"
num-complex = "0.2.4"
num_cpus = "1.12.0"
